--- a/templates/fred.html
+++ b/templates/fred.html
@@ -52,11 +52,12 @@ https://templatemo.com/tm-546-raheem-enterprises
               </li>
               <li class="nav-item active">
                     <!-- Dropdown -->
-                <li class="nav-item">
+                <li class="nav-item dropdown">
                     <a class="nav-link" href="/products">
                       Products
                     </a>
-              </ul>
+
+                </li>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -79,36 +80,21 @@ https://templatemo.com/tm-546-raheem-enterprises
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">PLAY EQUIPMENTS <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h1 class="text-center">Fred & Flo <em class="text-danger">Dashboard</em></h1>
+    <div class="row">
+        <div class="col-6">
+            <img src="../static/images/diapers/fred/9a59b000a253e20f541c38aa3a2761cf.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/fred/52404_1604759418.jpg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/fred/189593cc6dc9d6bdf9f6549bebf67317.jpeg" height="300" width="300" alt="">
+        </div>
 
-    <div class="row ml-5">
-        <div class="col-4 text-white"></div>
-        <div class="col-4">
-            <a href=""><button>Baby Play Mat</button></a>
+        <div class="col-6 mt-5">
+            <img src="../static/images/diapers/fred/image_98_ca26ab65-a892-4c6a-8cd2-a2d4b0f3cff9_540x.jpg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/fred/ShotType1_540x540.jpg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/fred/snapshotimagehandler_1070185892.jpeg" height="300" width="300" alt="">
         </div>
-        <div class="col-4"></div>
-    </div>
-
-    <div class="row mt-5 ml-5">
-        <div class="col-3"></div>
-        <div class="col-3">
-            <a href=""><button>Playing Gym</button></a>
-        </div>
-        <div class="col-3">
-            <a href=""><button>Baby Toys</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
-
-      <div class="row mt-5 ml-5">
-        <div class="col-3"></div>
-        <div class="col-3">
-            <a href=""><button>VTech Walkers</button></a>
-        </div>
-        <div class="col-3">
-            <a href=""><button>Toys</button></a>
-        </div>
-        <div class="col-3"></div>
+         <a class="navbar-brand btn-block  text-center" href="/diapers"><h2><button>Diapers<em class="text-danger">Dashboard</em></button></h2></a>
+         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
 
    <footer>
@@ -122,13 +108,10 @@ https://templatemo.com/tm-546-raheem-enterprises
             </div>
           </div>
         </div>
-          <a class="navbar-brand btn-block  text-center" href="/dashboard"><h2><button>Products <em class="text-danger">Dashboard</em></button></h2></a>
-          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main<em class="text-danger">Dashboard</em></button></h2></a>
       </div>
     </footer>
 
-
-    <!-- Bootstrap core JavaScript -->
+   <!-- Bootstrap core JavaScript -->
     <script src="../static/bootstrap/js/jquery-3.4.0.js"></script>
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
 
