--- a/templates/gym.html
+++ b/templates/gym.html
@@ -52,12 +52,10 @@ https://templatemo.com/tm-546-raheem-enterprises
               </li>
               <li class="nav-item active">
                     <!-- Dropdown -->
-                <li class="nav-item dropdown">
+                <li class="nav-item">
                     <a class="nav-link" href="/products">
                       Products
                     </a>
-
-                </li>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -71,49 +69,30 @@ https://templatemo.com/tm-546-raheem-enterprises
                 <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
               </li>
-                <li> class="nav-item">
-                <a class="nav-link" href="/dashboard">Dashboard</a>
-                </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">DIAPERS <em class="text-danger">DASHBOARD</em></h1>
-
+    <br><br><br><br><h1 class="text-center">Baby Playing Gym <em class="text-danger">Dashboard</em></h1>
     <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4">
-            <a href="/pampers"><button class="justify-content-center">PAMPERS</button></a>
+        <div class="col-6">
+            <img src="../static/images/p_equipments/gym/images.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/p_equipments/gym/55c49dad332fb38ef06b87aa4e92c428.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/p_equipments/gym/d3efc3c53331d5842aa9fd20758baede.jpg" height="300" width="300" alt="">
         </div>
-        <div class="col-4"></div>
+
+        <div class="col-6 mt-5">
+            <img src="../static/images/p_equipments/gym/Dropship-Baby-Gym-Children-Activity-Carpet-Cradle-Musical-Piano-Play-Mat-Gift-Educational-House-Rack-Puzzle.jpg_640x640.jpg" height="300" width="300" alt="">
+            <img src="../static/images/p_equipments/gym/HTB10JLczbSYBuNjSspiq6xNzpXaq.jpg" height="300" width="300" alt="">
+            <img src="../static/images/p_equipments/gym/negi-children-baby-activity-play-gym-with-rattles-hanging-toys-for-baby-toy-negi_600x600.jpg" height="300" width="300" alt="">
+        </div>
+         <a class="navbar-brand btn-block  text-center" href="/equipments"><h2><button>Play Equipments<em class="text-danger">Dashboard</em></button></h2></a>
+         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
 
-    <div class="row mt-5">
-        <div class="col-3"></div>
-        <div class="col-3">
-            <a href="/huggies"><button>HUGGIES</button></a>
-        </div>
-        <div class="col-3">
-            <a href="/angels"><button>LITTLE ANGELS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
-
-    <div class="row mt-5">
-        <div class="col-3"></div>
-        <div class="col-3">
-            <a href="/rascal"><button>RASCAL & FRIENDS</button></a>
-        </div>
-        <div class="col-3">
-            <a href="/fred"><button>FRED & FLO</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
-     <a class="navbar-brand mt-5 btn-block  text-center" href="/products_dash"><h2><button>Main<em class="text-danger">Dashboard</em></button></h2></a>
-
-  <footer>
+   <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -127,7 +106,8 @@ https://templatemo.com/tm-546-raheem-enterprises
       </div>
     </footer>
 
-   <!-- Bootstrap core JavaScript -->
+
+    <!-- Bootstrap core JavaScript -->
     <script src="../static/bootstrap/js/jquery-3.4.0.js"></script>
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
 
