--- a/templates/little_angels.html
+++ b/templates/little_angels.html
@@ -80,40 +80,25 @@ https://templatemo.com/tm-546-raheem-enterprises
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">DIAPERS <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h1 class="text-center">Little Angels <em class="text-danger">Dashboard</em></h1>
 
     <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4">
-            <a href="/pampers"><button class="justify-content-center">PAMPERS</button></a>
+        <div class="col-6">
+            <img src="../static/images/diapers/angels/images.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/angels/4-asda-little-angels-newborn.jpg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/angels/140456_1596826345.jpg" height="300" width="300" alt="">
         </div>
-        <div class="col-4"></div>
+
+        <div class="col-6 mt-5">
+            <img src="../static/images/diapers/angels/asda-little-angels-comfort-protect-size-5-nappie_w555_h555.png" height="300" width="300" alt="">
+            <img src="../static/images/diapers/angels/pants6.jpg" height="300" width="300" alt="">
+            <img src="../static/images/diapers/angels/images%20(1).jpeg" height="300" width="300" alt="">
+        </div>
+         <a class="navbar-brand btn-block  text-center" href="/diapers"><h2><button>Diapers<em class="text-danger">Dashboard</em></button></h2></a>
+         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
 
-    <div class="row mt-5">
-        <div class="col-3"></div>
-        <div class="col-3">
-            <a href="/huggies"><button>HUGGIES</button></a>
-        </div>
-        <div class="col-3">
-            <a href="/angels"><button>LITTLE ANGELS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
-
-    <div class="row mt-5">
-        <div class="col-3"></div>
-        <div class="col-3">
-            <a href="/rascal"><button>RASCAL & FRIENDS</button></a>
-        </div>
-        <div class="col-3">
-            <a href="/fred"><button>FRED & FLO</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
-     <a class="navbar-brand mt-5 btn-block  text-center" href="/products_dash"><h2><button>Main<em class="text-danger">Dashboard</em></button></h2></a>
-
-  <footer>
+    <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
