--- a/templates/p_equipments.html
+++ b/templates/p_equipments.html
@@ -52,12 +52,10 @@ https://templatemo.com/tm-546-raheem-enterprises
               </li>
               <li class="nav-item active">
                     <!-- Dropdown -->
-                <li class="nav-item dropdown">
+                <li class="nav-item">
                     <a class="nav-link" href="/products">
                       Products
                     </a>
-
-                </li>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -71,49 +69,48 @@ https://templatemo.com/tm-546-raheem-enterprises
                 <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
               </li>
-                <li> class="nav-item">
-                <a class="nav-link" href="/dashboard">Dashboard</a>
-                </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">DIAPERS <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h1 class="text-center">PLAY EQUIPMENTS <em class="text-danger">DASHBOARD</em></h1>
 
-    <div class="row">
-        <div class="col-4"></div>
+    <div class="row ml-5">
+        <div class="col-4 text-white"></div>
         <div class="col-4">
-            <a href="/pampers"><button class="justify-content-center">PAMPERS</button></a>
+            <a href="/p_mats"><button>Baby Play Mat</button></a>
         </div>
         <div class="col-4"></div>
     </div>
 
-    <div class="row mt-5">
+    <div class="row mt-5 ml-5">
         <div class="col-3"></div>
         <div class="col-3">
-            <a href="/huggies"><button>HUGGIES</button></a>
+            <a href="/gym"><button>Playing Gym</button></a>
         </div>
         <div class="col-3">
-            <a href="/angels"><button>LITTLE ANGELS</button></a>
+            <a href="/btoys"><button>Baby Toys</button></a>
         </div>
         <div class="col-3"></div>
     </div>
 
-    <div class="row mt-5">
+      <div class="row mt-5 ml-5">
         <div class="col-3"></div>
         <div class="col-3">
-            <a href="/rascal"><button>RASCAL & FRIENDS</button></a>
+            <a href="/walkers"><button>VTech Walkers</button></a>
         </div>
         <div class="col-3">
-            <a href="/fred"><button>FRED & FLO</button></a>
+            <a href="/ptoys"><button>Toys</button></a>
         </div>
         <div class="col-3"></div>
-    </div>
-     <a class="navbar-brand mt-5 btn-block  text-center" href="/products_dash"><h2><button>Main<em class="text-danger">Dashboard</em></button></h2></a>
+           </div>
+         <a class="navbar-brand mt-5 btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
 
-  <footer>
+    </div>
+
+   <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -127,7 +124,8 @@ https://templatemo.com/tm-546-raheem-enterprises
       </div>
     </footer>
 
-   <!-- Bootstrap core JavaScript -->
+
+    <!-- Bootstrap core JavaScript -->
     <script src="../static/bootstrap/js/jquery-3.4.0.js"></script>
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
 
