--- a/templates/cow.html
+++ b/templates/cow.html
@@ -77,41 +77,30 @@ https://templatemo.com/tm-546-raheem-enterprises
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">FEEDINGS <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h1 class="text-center">Cow & Gate Baby Formulae <em class="text-danger">Dashboard</em></h1>
 
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-3">
-            <a href="/bibs"><button>BIBS & MUSLIN SQUARE</button></a>
+        <div class="col-6">
+            <img src="../static/images/formula/cow/images.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/formula/cow/download.jpeg" width="300" height="300" alt="">
+            <img src="../static/images/formula/cow/cow-gate-nutripepti-0-12-months-formula-cow-and-gate_600x.jpg" height="300" width="300" alt="">
         </div>
-        <div class="col-3">
-            <a href="/bottles"><button>BOTTLE FEEDING & STERILIZERS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
 
-    <div class="row mt-5">
-         <div class="col-4"></div>
-        <div class="col-4">
-            <a href="/soothers"><button>SOOTHERS & TEETHERS</button></a>
+        <div class="col-6 mt-5">
+            <img src="../static/images/formula/cow/images%20(3).jpeg" width="300" height="300" alt="">
+            <img src="../static/images/formula/cow/images%20(1).jpeg" height="300" width="300" alt="">
+            <img src="../static/images/formula/cow/images%20(2).jpeg" width="300" height="300" alt="">
         </div>
-        <div class="col-4"></div>
-    </div>
+        </div>
+         <a class="navbar-brand btn-block mt-5 text-center" href="/formula"><h2><button>Baby Formulae<em class="text-danger">Dashboard</em></button></h2></a>
+         <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
 
-    <div class="row mt-5">
-         <div class="col-3"></div>
-        <div class="col-3">
-            <a href="/chairs"><button>HIGH CHAIRS</button></a>
-        </div>
-        <div class="col-3">
-            <a href="/h_chairs"><button>BOOSTER SEATS</button></a>
-        </div>
-        <div class="col-3"></div>
-        <a class="navbar-brand btn-block mt-5 text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
 
 
- <footer>
+
+
+  <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -149,6 +138,7 @@ https://templatemo.com/tm-546-raheem-enterprises
           }
       }
     </script>
+
 
 </body>
 </html>
