--- a/templates/formula.html
+++ b/templates/formula.html
@@ -58,7 +58,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                     </a>
 
                 </li>
-
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
@@ -72,9 +71,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                 <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
               </li>
-                <li> class="nav-item">
-                <a class="nav-link" href="/dashboard">Dashboard</a>
-                </li>
             </ul>
           </div>
         </div>
@@ -86,10 +82,10 @@ https://templatemo.com/tm-546-raheem-enterprises
         <div class="row mt-5">
             <div class="col-3"></div>
             <div class="col-3">
-                <a href=""><button>Aptamil Range</button></a>
+                <a href="/aptamil"><button>Aptamil Range</button></a>
             </div>
             <div class="col-3">
-                <a href=""><button>SMA Formulae</button></a>
+                <a href="/sma"><button>SMA Formulae</button></a>
             </div>
             <div class="col-3"></div>
         </div>
@@ -97,10 +93,10 @@ https://templatemo.com/tm-546-raheem-enterprises
         <div class="row mt-5">
             <div class="col-3"></div>
             <div class="col-3">
-                <a href=""><button>Cow & Gate Formulae</button></a>
+                <a href="/cow"><button>Cow & Gate Formulae</button></a>
             </div>
             <div class="col-3">
-                <a href=""><button>Kendamil Formulae</button></a>
+                <a href="/kenda"><button>Kendamil Formulae</button></a>
             </div>
             <div class="col-3"></div>
         </div>
@@ -108,14 +104,15 @@ https://templatemo.com/tm-546-raheem-enterprises
         <div class="row mt-5">
             <div class="col-3"></div>
             <div class="col-3">
-                <a href=""><button>Hipp Milk</button></a>
+                <a href="/hipp"><button>Hipp Milk</button></a>
             </div>
             <div class="col-3">
-                <a href=""><button>Mammy Care Formulae</button></a>
+                <a href="/mammy"><button>Mammy Care Formulae</button></a>
             </div>
             <div class="col-3"></div>
         </div>
 
+        <a class="navbar-brand btn-block mt-5 text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
 
 
    <footer>
