--- a/templates/index.html
+++ b/templates/index.html
@@ -229,7 +229,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-6">
             <div class="left-content">
               <h4>Looking for the best products?</h4>
-              <p><a rel="nofollow" href="https://templatemo.com/tm-546-sixteen-clothing" target="_parent">This template</a> is free to use for your business websites. However, you have no permission to redistribute the downloadable ZIP file on any template collection website. <a rel="nofollow" href="https://templatemo.com/contact">Contact us</a> for more info.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis tempora, tempore? Animi assumenda beatae commodi distinctio dolor eum eveniet in incidunt minima optio quasi quibusdam, sapiente suscipit ut vel voluptatibus.</p>
               <ul class="featured-list">
                 <li><a href="#">Lorem ipsum dolor sit amet</a></li>
                 <li><a href="#">Consectetur an adipisicing elit</a></li>
