--- a/templates/products.html
+++ b/templates/products.html
@@ -128,9 +128,9 @@ https://templatemo.com/tm-546-raheem-enterprises
                     </div>
                     <div class="col-lg-4 col-md-4 all dev">
                       <div class="product-item">
-                        <a href="/hoodies"><img src="../static/images/stussy-classic-dot-hood-ash-hearher-1_600x600.jpg" alt=""></a>
+                        <a href="#"><img src="../static/images/stussy-classic-dot-hood-ash-hearher-1_600x600.jpg" alt=""></a>
                         <div class="down-content">
-                          <a href="/hoodies"><h4>Classic Hoodies</h4></a>
+                          <a href="#"><h4>Classic Hoodies</h4></a>
                           <h6>$16.75</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
@@ -146,9 +146,9 @@ https://templatemo.com/tm-546-raheem-enterprises
                     </div>
                     <div class="col-lg-4 col-md-4 all gra">
                       <div class="product-item">
-                        <a href="/scarves"><img src="../static/images/versace-BlackGold-Fancy-Detail-Classic-Scarf-blackgold-Scarves.jpeg" alt=""></a>
+                        <a href="#"><img src="../static/images/versace-BlackGold-Fancy-Detail-Classic-Scarf-blackgold-Scarves.jpeg" alt=""></a>
                         <div class="down-content">
-                          <a href="/scarves"><h4>Classic Scarves</h4></a>
+                          <a href="#"><h4>Classic Scarves</h4></a>
                           <h6>$32.50</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
@@ -164,9 +164,9 @@ https://templatemo.com/tm-546-raheem-enterprises
                     </div>
                     <div class="col-lg-4 col-md-4 all gra">
                       <div class="product-item">
-                        <a href="/blankets"><img src="../static/images/images%20(1).jpeg" alt=""></a>
+                        <a href="#"><img src="../static/images/images%20(1).jpeg" alt=""></a>
                         <div class="down-content">
-                          <a href="/blankets"><h4>Woolen Blankets</h4></a>
+                          <a href="#"><h4>Woolen Blankets</h4></a>
                           <h6>$24.60</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
@@ -181,24 +181,6 @@ https://templatemo.com/tm-546-raheem-enterprises
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-4 all dev">
-                      <div class="product-item">
-                        <a href="/pull_necks"><img src="../static/images/1.jpg" alt=""></a>
-                        <div class="down-content">
-                          <a href="/pull_necks"><h4>Pull Neck Sweaters</h4></a>
-                          <h6>$18.75</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
-                          <ul class="stars">
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                          </ul>
-                          <span>Reviews (60)</span>
-                        </div>
-                      </div>
-                    </div>
-                      <div class="col-lg-4 col-md-4 all dev">
                       <div class="product-item">
                         <a href="#"><img src="../static/images/1.jpg" alt=""></a>
                         <div class="down-content">
@@ -215,6 +197,7 @@ https://templatemo.com/tm-546-raheem-enterprises
                           <span>Reviews (60)</span>
                         </div>
                       </div>
+                    </div>
                     </div>
                     <div class="col-lg-4 col-md-4 all des">
                       <div class="product-item">
@@ -274,15 +257,19 @@ https://templatemo.com/tm-546-raheem-enterprises
 
             </div>
           </div>
+
           <div class="col-md-12">
-            <ul class="pages">
-              <li><a href="#">1</a></li>
-              <li class="active"><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">4</a></li>
-              <li><a href="#"><i class="fa fa-angle-double-right"></i></a></li>
-            </ul>
+              <div class="product-item">
+                <ul class="pages">
+                  <li><a href="#">1</a></li>
+                  <li class="active"><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                  <li><a href="#">4</a></li>
+                  <li><a href="#">5<i class="fa fa-angle-double-right"></i></a></li>
+                </ul>
+              </div>
           </div>
+
         </div>
       </div>
     </div>
