--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -93,7 +93,7 @@ a.filled-button:hover {
 }
 
 .about-heading {
-	background-image: url(../images/about-heading.jpg);
+	background-image: url(../images/water-696x338.jpg);
 }
 
 .contact-heading {
