--- a/templates/about.html
+++ b/templates/about.html
@@ -78,7 +78,7 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="text-content">
-              <h4>about us</h4>
+              <h4>About us</h4>
               <h2>our company</h2>
             </div>
           </div>
@@ -97,7 +97,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-6">
             <div class="right-image">
-              <img src="../static/images/feature-image.jpg" alt="">
+              <img src="../static/images/logo/hBE-d6cZ.jpg" height="350" width="400" alt="">
             </div>
           </div>
           <div class="col-md-6">
