--- a/templates/hipp.html
+++ b/templates/hipp.html
@@ -77,41 +77,27 @@ https://templatemo.com/tm-546-raheem-enterprises
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">FEEDINGS <em class="text-danger">DASHBOARD</em></h1>
+    <br><br><br><br><h1 class="text-center">Hipp Baby Formulae <em class="text-danger">Dashboard</em></h1>
 
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-3">
-            <a href="/bibs"><button>BIBS & MUSLIN SQUARE</button></a>
+        <div class="col-6">
+            <img src="../static/images/formula/hipp/images.jpeg" height="300" width="300" alt="">
+            <img src="../static/images/formula/hipp/download.jpeg" width="300" height="300" alt="">
+            <img src="../static/images/formula/hipp/4062300173484-1-pdpxl.jpg" height="300" width="300" alt="">
         </div>
-        <div class="col-3">
-            <a href="/bottles"><button>BOTTLE FEEDING & STERILIZERS</button></a>
-        </div>
-        <div class="col-3"></div>
-    </div>
 
-    <div class="row mt-5">
-         <div class="col-4"></div>
-        <div class="col-4">
-            <a href="/soothers"><button>SOOTHERS & TEETHERS</button></a>
+        <div class="col-6 mt-5">
+            <img src="../static/images/formula/hipp/HiPP-Dutch-1-Front_1024x1024@2x.jpg" width="300" height="300" alt="">
+            <img src="../static/images/formula/hipp/U1276a0910dbc46c5807559ef76b6cb510.jpg" height="300" width="300" alt="">
+            <img src="../static/images/formula/hipp/4062300173484-1-pdpxl%20(1).jpg" width="300" height="300" alt="">
         </div>
-        <div class="col-4"></div>
-    </div>
+          <a class="navbar-brand btn-block mt-5 text-center" href="/formula"><h2><button>Baby Formulae<em class="text-danger">Dashboard</em></button></h2></a>
+          <a class="navbar-brand btn-block  text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
 
-    <div class="row mt-5">
-         <div class="col-3"></div>
-        <div class="col-3">
-            <a href="/chairs"><button>HIGH CHAIRS</button></a>
-        </div>
-        <div class="col-3">
-            <a href="/h_chairs"><button>BOOSTER SEATS</button></a>
-        </div>
-        <div class="col-3"></div>
-        <a class="navbar-brand btn-block mt-5 text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
     </div>
 
 
- <footer>
+  <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -149,6 +135,7 @@ https://templatemo.com/tm-546-raheem-enterprises
           }
       }
     </script>
+
 
 </body>
 </html>
