--- a/templates/cart.html
+++ b/templates/cart.html
@@ -9,15 +9,15 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Raheem Enterprises</title>
+    <title>RAHEEM ENTERPRISES WEBSITE</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <!--
 
-TemplateMo 546 Raheem Enterprises
+TemplateMo 546 Sixteen Clothing
 
-https://templatemo.com/tm-546-raheem-enterprises
+https://templatemo.com/tm-546-sixteen-clothing
 
 -->
 
@@ -27,17 +27,14 @@ https://templatemo.com/tm-546-raheem-enterprises
     <link rel="stylesheet" href="../static/css/owl.css">
 
   </head>
-
-  <body>
-
-
+<body>
 
     <!-- Header -->
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
              <div>
-               <img class="mr-2" src="../static/images/logo/hBE-d6cZ.jpg" height="50" width="50" alt="">
+               <img class="mr-2" src="../static/images/logo/hBE-d6cZ.jpg" height="60" width="60" alt="">
              </div>
           <a class="navbar-brand" href="/"><h2>Royal Mamas <em>& Tots</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,19 +42,16 @@ https://templatemo.com/tm-546-raheem-enterprises
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/">Home
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
-              <li class="nav-item active">
-                    <!-- Dropdown -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link" href="/products_dash">
-                      Products
-                    </a>
+               <li class="nav-item">
+                  <a class="nav-link" href="/products">
+                   Products
+                  </a>
                 </li>
-              </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
               </li>
@@ -76,58 +70,11 @@ https://templatemo.com/tm-546-raheem-enterprises
       </nav>
     </header>
 
-    <br><br><br><br><h1 class="text-center">CLOTHINGS<em class="text-danger">DASHBOARD</em></h1>
 
-<div class="row">
-    <div class="col-3"></div>
-    <div class="col-3">
-        <a href="/shoes"><button>SHOES</button></a>
-    </div>
-    <div class="col-3"></div>
-    <div class="col-3">
-        <a href="/hoodies"><button>HOODIES</button></a>
-    </div>
 
-</div>
 
-<div class="row ml-5 mt-5">
-    <div class="col-4">
-        <a href="/blankets"><button>BLANKETS</button></a>
-    </div>
-    <div class="col-4">
-        <a href="/pull_necks"><button>PULL NECKS</button></a>
-    </div>
-    <div class="col-4">
-        <a href="/skirts"><button>SKIRTS</button></a>
-    </div>
-</div>
 
-<div class="row mt-5">
-    <div class="col-3"></div>
-    <div class="col-3">
-        <a href="/marvins"><button>MARVINS</button></a>
-    </div>
-    <div class="col-3">
-         <a href="/shirts"><button>T-SHIRTS</button></a>
-    </div>
-    <div class="col-3"></div>
-
-</div>
-
-<div class="row ml-5 mt-5">
-    <div class="col-4">
-       <a href="/trousers"><button>TROUSERS</button></a>
-    </div>
-     <div class="col-4">
-       <a href="/dresses"><button>DRESSES</button></a>
-    </div>
-     <div class="col-4">
-        <a href="/scarves"><button>SCARVES</button></a>
-    </div>
-    <a class="navbar-brand btn-block mt-5 text-center" href="/products_dash"><h2><button>Main <em class="text-danger">Dashboard</em></button></h2></a>
-</div>
-
-   <footer>
+    <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -165,5 +112,6 @@ https://templatemo.com/tm-546-raheem-enterprises
           }
       }
     </script>
+
 </body>
 </html>
