--- a/templates/hoodies.html
+++ b/templates/hoodies.html
@@ -45,6 +45,9 @@ https://raheem.com/tm-546-raheem-enterprises
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                <li style="color: red">
+                    <a href=""><i class="fas fa-cart-plus"></i></a>
+                </li>
               <li class="nav-item">
                 <a class="nav-link" href="/">Home
                   <span class="sr-only">(current)</span>
@@ -67,6 +70,9 @@ https://raheem.com/tm-546-raheem-enterprises
               </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li>
+                    <a href=""><i class="fas fa-cart-plus" style="color: white"></i></a>
                 </li>
             </ul>
           </div>
